metadata changes + loading of work changes

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Jorden Carter-Whitbey's portfolio website">
+  <meta property="og:title" content="Jorden Carter-Whitbey" />
+  <meta property="og:url" content="https://jorden-cw.com/" />
+  <meta property="og:image" content="https://cdn.pixabay.com/photo/2017/10/10/21/46/laptop-2838917_960_720.jpg" />
+  <meta name="twitter:title" content="Jorden Carter-Whitbey">
+  <meta name="twitter:description" content="Jorden Carter-Whitbey's portfolio website">
+  <meta name="twitter:image" content="https://cdn.pixabay.com/photo/2017/10/10/21/46/laptop-2838917_960_720.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Hind+Madurai&display=swap" rel="stylesheet">
 
